# universal-bottle-tracker

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  buildPushDockerHub.sh  docker-compose.yml  sqlite.db  sqlite.db-shm  sqlite.db-wal
docx/: labels.docx
src/: error_wrapper.rs  handlers.rs  labels.rs  main.rs  model.rs
static/: index.html
static/assets/: AboutPage.6d76413b.js  BottlePage.92961366.js  ErrorNotFound.d2c8e162.js  MainLayout.3e6127fb.js  QBtn.6d27bdb6.js  QPage.ed9669d4.js  QSpinner.23937d57.js  Ripple.f9cf49ff.js  SettingsPage.c9cf6711.js  axios.51a13d94.js  brewfather.6ffbf7b6.js  index.337f03b4.js  render.a42eb5c9.js  scroll.2adde525.js
web/: .gitignore  README.md  index.html  jsconfig.json  package-lock.json  package.json  quasar.config.js  quasarBuildLocal.sh
web/src/: App.vue
web/src/js/: brewfather.js
web/src/layouts/: MainLayout.vue
web/src/pages/: AboutPage.vue  BottlePage.vue  SettingsPage.vue
web/src/router/: routes.js
web/src/views/: HomeView.vue  InstructionsView.vue  SettingsView.vue
web_old/: package-lock.json  package.json
web_old/src/js/: brewfather.js
web_old/src/router/: index.js
