[package]
name = "universal-bottle-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
codegen-units = 1
debug = false

[profile.dev]
opt-level = 0
debug = true
codegen-units = 256
incremental = true

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
axum = { version = "0.7"}
chrono = { version = "0.4", features = ["serde"] }
docx-rs = "0.2"
http-body = "1.0.0"
nanoid = "0.4.0"
qrcode-generator = "4.1.9"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlite", "json", "macros", "chrono"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
